edited mandatory fields

--- a/src/main/resources/liquibase/table/FIGHTER.yml
+++ b/src/main/resources/liquibase/table/FIGHTER.yml
@@ -21,7 +21,7 @@ databaseChangeLog:
                   name: LAST_NAME
                   type: VARCHAR(30)
                   constraints:
-                    nullable: false
+                    nullable: true
               - column:
                   name: STAGE_NAME
                   type: VARCHAR(30)
